Project

General

Profile

Actions

Bug #19074

closed

cannot cover the object expiration

Added by wenjun jing about 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
rgw
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

when we set the object expiration, and upload the same object to the container again. The previous object expiration also works, which is not consistent with the openstack swift.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #19472: kraken: cannot cover the object expirationResolvedNathan CutlerActions
Copied to rgw - Backport #19473: jewel: cannot cover the object expirationResolvedAlexey SheplyakovActions
Actions #1

Updated by Greg Farnum about 7 years ago

  • Project changed from Ceph to rgw
Actions #2

Updated by Yehuda Sadeh about 7 years ago

  • Assignee set to Radoslaw Zarzynski
Actions #4

Updated by Radoslaw Zarzynski about 7 years ago

  • Status changed from New to Pending Backport
  • Backport set to kraken,jewel
Actions #5

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19472: kraken: cannot cover the object expiration added
Actions #6

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19473: jewel: cannot cover the object expiration added
Actions #7

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF